--- a/templates/partial_templates/testee_info.html
+++ b/templates/partial_templates/testee_info.html
@@ -4,18 +4,39 @@
     <!-- First Name -->
     <div class="flex flex-col">
         <label for="first_name" class="text-base md:text-lg font-medium text-gray-700">First Name</label>
-        <input type="text" id="first_name" name="first_name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" required>
+        <input 
+        type="text" 
+        id="first_name"
+        name="first_name"
+        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" {% match prefilled_user_info.first_name %}{% when Some with (data) %}value="{{ data }}"{% when None %}{% endmatch %}
+        required
+        {% match test.metadata.is_graded %}{% when Some with (_) %}readonly{% when None %}{% endmatch %}
+        >
     </div>
 
     <!-- Last Name -->
     <div class="flex flex-col">
         <label for="last_name" class="text-base md:text-lg font-medium text-gray-700">Last Name</label>
-        <input type="text" id="last_name" name="last_name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" required>
+        <input 
+        type="text" 
+        id="last_name"
+        name="last_name"
+        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" {% match prefilled_user_info.last_name %}{% when Some with (data) %}value="{{ data }}"{% when None %}{% endmatch %}
+        required
+        {% match test.metadata.is_graded %}{% when Some with (_) %}readonly{% when None %}{% endmatch %}
+        >
     </div>
 
     <!-- Email Address -->
     <div class="flex flex-col">
         <label for="email" class="text-base md:text-lg font-medium text-gray-700">Email Address</label>
-        <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" required>
+        <input 
+        type="email"
+        id="email"
+        name="email"
+        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" {% match prefilled_user_info.email %}{% when Some with (data) %}value="{{ data }}"{% when None %}{% endmatch %}
+        required
+        {% match test.metadata.is_graded %}{% when Some with (_) %}readonly{% when None %}{% endmatch %}
+        >
     </div>
 </div>
