--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -1,11 +1,13 @@
+{# This template is used both for administering the test and displaying the graded test. #}
+
 {% extends "./extensible_templates/nav_on_top.html" %}
 
-{% block title %}{{ test_type|capitalize }} Test{% endblock %}
+{% block title %}{{ test.metadata.test_name }}{% endblock %}
 
 {% block content %}
 <body>
     <div class="mx-auto p-4">
-        <h2 class="text-4xl font-bold mb-4 text-center">{{ test_type|capitalize }} Advancement Test</h2>
+        <h2 class="text-4xl font-bold mb-4 text-center">{{ test.metadata.test_name }}</h2>
         <form method="post" class="bg-white p-6 rounded shadow-md">
 
             <!-- User Info Section -->
@@ -19,39 +21,56 @@
                 <p class="text-gray-600">For the best experience, please use a larger screen or switch to landscape mode on your mobile device.</p>
             </div>
 
+            
             <div class="hidden sm:block justify-center">
-                <!-- Dynamic Grading Section -->
-                
-                <div 
-                hx-post="/private/grade-test" 
-                hx-trigger="load, change from:form"
-                hx-debounce="0.25s"
-                >
-                </div>
+                {% match test_summary %}
+                    {% when Some with (summary) %}
+                    {% let grade_summary = summary.grade_summary.clone() %}
+                    {% let test_date = Some(summary.test_date.clone()) %}
+                    <!-- Test Results Section -->
+                        {% include "../partial_templates/test_grade.html" %} 
 
-                <div class="flex flex-col text-center">
-                    <input type="submit" value={% if is_demo_mode %}"Submission Disabled for Demo"{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 mb-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
-                </div>
+                    {% when None %}
 
-                <!-- Pattern Scoring Table -->
-                <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                    {% include "../partial_templates/pattern_scoring.html" %}
-                </div>
+                        {% if test.metadata.config_settings.live_grading %}
+                            <div 
+                                hx-post="/private/grade-test/{{ test_index }}" 
+                                hx-trigger="load, change from:form"
+                                hx-debounce="0.25s"
+                            >
+                            </div>
+                        {% endif %}
 
-                <!-- Technique Scoring Table -->
-
-                <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                    <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Technique Scoring</h2>
-                    {% for technique_group in technique_groups %}
-                        {% include "../partial_templates/technique_scoring.html" %}
-                    {% endfor %}
-                </div>
+                        <div class="flex flex-col text-center">
+                            <input type="submit" value={% if is_demo_mode %}"Submission Disabled for Demo"{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 mb-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
+                        </div>
+                {% endmatch %}
 
 
-                <!-- Bonus Points Table -->
-                <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                    {% include "../partial_templates/bonus_points.html" %}
-                </div>
+
+                <!-- Loop to Add Test Sections -->
+                {% for table in test.tables %}
+                    {% let table_index = loop.index0 %}
+                    <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+
+                        <!-- test.sections is a list of lists. The outer list says which sections are on the same table, and the inner list defines the sections themselves -->
+                        {% for section in table.sections %}
+                            {% let section_index = loop.index0 %}
+                            {% include "../partial_templates/test_section.html" %}
+                        {% endfor %}
+
+                    </div>
+                {% endfor %}
+
+
+                {% match test.bonus_items %}
+                    {% when Some with (bonus_items) %}
+                        <!-- Bonus Points Table -->
+                        <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+                            {% include "../partial_templates/bonus_section.html" %}
+                        </div>
+                    {% when None %}
+                {% endmatch %}
             </div>
         </form>
     </div>
