--- a/templates/primary_templates/search_testee.html
+++ b/templates/primary_templates/search_testee.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div id="search-testee-widget" class="text-center mt-4 mx-4 border-gray-100 bg-gray-50 shadow-lg rounded-lg p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
-    <h1 class="py-2 text-2xl font-bold">Search Testees</h1>
+    <h1 class="py-2 text-2xl font-bold">Testee Result Search</h1>
     {% if is_demo_mode %}<p class="text-gray-600">In the demo you should search for Mazzarelli</p>{% else %}{% endif %}
     <form 
         action="/search-testee" method="GET" hx-boost="true" hx-select="#search-results" hx-target="#search-results" hx-swap="outerHTML" 
@@ -44,7 +44,7 @@
         <h2 class="py-2 text-xl font-bold">Results</h2>
         {% for testee in data %}
             <ul class="bg-gray-100 border rounded hover:bg-gray-200 transition duration-300 mt-1 py-1">
-                <a href="/test-summaries/{{ testee.id }}">
+                <a href="/test-summaries/{{ testee.id.unwrap() }}">
                     {{ testee.first_name }} {{ testee.last_name }} - {{ testee.email }}
                 </a>
             </ul>
