can display test admin pages

--- a/templates/primary_templates/graded_or_ungraded_test.html
+++ b/templates/primary_templates/graded_or_ungraded_test.html
@@ -17,38 +17,14 @@
 
 {# Set up all the different variables so that the template renders correctly regardless if it is fed a graded or ungraded test. #}
 {% match test_enum %}
-    {% when Test::Ungraded with (ungraded_test) %}
+    {% when Test::Ungraded with (test) %}
         {# This means we are displaying the test administration form. #}
-        {% let metadata = ungraded_test.metadata.clone() %}
-        {% let test = ungraded_test %}
-        {% let is_graded = false %}
-        <p>Ungraded</p>
-        <p>Rendering {{ metadata.test_name }}</p>
+    
+        {% include "../partial_templates/ungraded_test.html" %} 
 
-        {% match ungraded_test %}
-            {% when UngradedTest %}
-                <p>Ungraded Test</p>
-        {% endmatch %}
-
-
-        {#
-        {% include "../partial_templates/test.html" %} 
-        #}
-
-    {% when Test::Graded with (graded_test) %}
+    {% when Test::Graded with (test) %}
         {# This means we are simply displaying a graded test --> shouldn't be editable by the user. #}
-
-        {# Grab the composed sub-structs and ensure their names match what the template expects. #}
-        {% let metadata = graded_test.metadata.ungraded_metadata.clone() %}
-        {% let test = graded_test %}
-        {% let is_graded = true %}
-
         <p>Graded</p>
 {% endmatch %}
 
 {% endblock %}
-
-{#
-
-{% endblock %}
-#}
