add htmx and make the queue prettier

--- a/templates/extensible_templates/nav_on_top.html
+++ b/templates/extensible_templates/nav_on_top.html
@@ -32,20 +32,33 @@
         <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border-4 border-gray-100 rounded-lg md:space-x-8 md:flex-row md:mt-0 md:border-0 bg-gray-900">
           <li>
             <a 
-              href="/" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" 
+              href="/" 
+              hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" 
               class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0" 
               aria-current="page">
               Home
             </a>
           </li>
           <li>
-            <a href="/dashboard" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Dashboard</a>
+            <a 
+            href="/dashboard" 
+            hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML"
+            class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0"
+            >Dashboard</a>
           </li>
           <li>
-            <a href="/queue" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Test Queue</a>
+            <a 
+            href="/queue" 
+            hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML"
+            class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0"
+            >Test Queue</a>
           </li>
           <li>
-            <a href="/contact" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Contact</a>
+            <a 
+            href="/contact" 
+            hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML"
+            class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0"
+            >Contact</a>
           </li>
         </ul>
       </div>
