--- a/templates/partial_templates/user_dropdown.html
+++ b/templates/partial_templates/user_dropdown.html
@@ -29,7 +29,7 @@
 
 {% when None %}
     <div class="flex items-center">
-        <a href="/login" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none">
+        <a href="/login" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML">
 
             <!-- For really tiny screens, just say login so that it fits in the navbar -->
             <button type="button" class="sm:hidden text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Login</button>
