update email template formatting

--- a/templates/primary_templates/email_template.html
+++ b/templates/primary_templates/email_template.html
@@ -32,7 +32,7 @@
         th, td {
             border: 1px solid #dddddd;
             padding: 12px;
-            text-align: left;
+            text-align: center; 
         }
         th {
             background-color: #4A90E2;
