--- a/templates/partial_templates/user_dropdown.html
+++ b/templates/partial_templates/user_dropdown.html
@@ -18,6 +18,9 @@
                 <a href="/dashboard" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Dashboard</a>
                 </li>
                 <li>
+                    <a href="/broad-test-results" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Broad Test Results</a>
+                    </li>
+                <li>
                 <a href="/search-testee" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Search Testee</a>
                 </li>
             </ul>
