--- a/templates/primary_templates/testee_test_summaries.html
+++ b/templates/primary_templates/testee_test_summaries.html
@@ -51,7 +51,7 @@
 
         {% when None %}
         
-        <p>This shouldn't be possible. Every testee that exists should have at least one test.</p>
+        <p>This testee has never taken any tests. Perhaps they were just added to the queue but never administered?</p>
 
     {% endmatch %}
 
