--- a/templates/partial_templates/testee_info.html
+++ b/templates/partial_templates/testee_info.html
@@ -42,17 +42,23 @@
         >
     </div>
     {% if email_functionality_active %}
-        <div class="flex items-center">
+        <div class="flex items-center space-x-2">
+            <!-- Visible Checkbox -->
             <input 
                 type="checkbox" 
                 id="send_email_results" 
                 name="send_email_results" 
-                class="hidden peer" 
+                class="h-5 w-5 text-blue-600 border-gray-300 rounded focus:ring-blue-500 cursor-pointer transition duration-300" 
                 checked
             >
+            
+            <!-- Label styled as button -->
             <label 
                 for="send_email_results" 
-                class="inline-flex items-center justify-center w-full h-12 p-2 text-md md:text-lg font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent hover:bg-gray-100 hover:shadow-sm transition duration-300">Email Test Results</label>
+                class="inline-flex items-center justify-center w-full h-12 p-2 text-md md:text-lg font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent hover:bg-gray-100 hover:shadow-sm transition duration-300"
+            >
+                Email Test Results
+            </label>
         </div>
     {% endif %}
 </div>
