--- a/templates/primary_templates/email_template.html
+++ b/templates/primary_templates/email_template.html
@@ -78,6 +78,7 @@
                     <td>{{ test.test_date|trim_end_chars(10) }}</td>
                     <td>{{ test.proctor.first_name }} {{ test.proctor.last_name }}</td>
                     <td>
+                        {# This link needs to be HTTPS or email servers scrub the link from the anchor tag. #}
                         <a href="https://{{ server_root_url }}/test-results/{{ test.test_id }}">View Results</a>
                     </td>
                 </tr>
